src/sonare_c_project.h


typedef struct SonareProject SonareProject;
typedef struct {
  int kind; 
  const char* name;
} SonareProjectTrackDesc;
typedef struct {
  uint32_t track_id;
  int is_midi; 
  double start_ppq;
  double length_ppq;
  double source_offset_ppq;
  float gain; 
  const float* audio_interleaved;
  int64_t audio_frames;
  int audio_channels;
  int audio_sample_rate;
  const char* source_uri;
} SonareProjectClipDesc;
typedef struct {
  uint32_t code;      
  uint32_t severity;  
  uint32_t target_id; 
} SonareProjectDiagnostic;
typedef struct {
  SonareProjectDiagnostic* diagnostics;
  size_t diagnostic_count;
  char* messages;
  int has_timeline;
} SonareProjectCompileResult;
typedef struct {
  int64_t total_frames;           
  int block_size;                 
  int num_channels;               
  int sample_rate;                
  int instrument_latency_samples; 
} SonareProjectBounceOptions;
typedef struct {
  double ppq;
  uint32_t data0;
  uint32_t data1;
} SonareMidiEventPod;
typedef struct {
  int ok;
  uint32_t unmatched_note_ons;
  uint32_t unmatched_note_offs;
} SonareNotePairValidation;
typedef struct {
  double length_ppq;
  uint32_t curve; 
} SonareProjectClipFade;
typedef struct {
  uint32_t target_param_id;
  const SonareAutomationPoint* points;
  size_t point_count;
} SonareAutomationLaneDesc;
uint32_t sonare_project_abi_version(void);
SonareError sonare_project_create(SonareProject** out);
void sonare_project_destroy(SonareProject* project);
SonareError sonare_project_serialize(const SonareProject* project, char** out_json,
                                     size_t* out_len);
SonareError sonare_project_deserialize(const char* json, size_t len, SonareProject** out,
                                       char** out_diag);
SonareError sonare_project_set_sample_rate(SonareProject* project, double sample_rate);
SonareError sonare_project_compile(SonareProject* project, SonareProjectCompileResult* out);
void sonare_project_free_compile_result(SonareProjectCompileResult* result);
SonareError sonare_project_bounce(SonareProject* project, const SonareProjectBounceOptions* options,
                                  float** out_interleaved, size_t* out_len);
typedef struct {
  int waveform;     
  float gain;       
  float attack_ms;  
  float decay_ms;   
  float sustain;    
  float release_ms; 
  int polyphony;    
} SonareBuiltinSynthConfig;
typedef struct {
  uint32_t destination_id;
  SonareBuiltinSynthConfig config;
} SonareBuiltinInstrumentBinding;
SonareError sonare_project_bounce_with_builtin_instruments(
    SonareProject* project, const SonareProjectBounceOptions* options,
    const SonareBuiltinInstrumentBinding* instruments, size_t instrument_count,
    float** out_interleaved, size_t* out_len);
SonareError sonare_project_add_track(SonareProject* project, const SonareProjectTrackDesc* desc,
                                     uint32_t* out_track_id);
SonareError sonare_project_add_clip(SonareProject* project, const SonareProjectClipDesc* desc,
                                    uint32_t* out_clip_id);
SonareError sonare_project_add_midi_clip(SonareProject* project, double start_ppq,
                                         double length_ppq, uint32_t* out_track_id,
                                         uint32_t* out_clip_id);
SonareError sonare_project_split_clip(SonareProject* project, uint32_t clip_id, double split_ppq,
                                      uint32_t* out_new_clip_id);
SonareError sonare_project_trim_clip(SonareProject* project, uint32_t clip_id, double new_start_ppq,
                                     double new_length_ppq);
SonareError sonare_project_move_clip(SonareProject* project, uint32_t clip_id, double new_start_ppq,
                                     uint32_t new_track_id);
SonareError sonare_project_set_clip_warp_ref(SonareProject* project, uint32_t clip_id,
                                             uint32_t warp_ref_id);
SonareError sonare_project_set_track_midi_destination(SonareProject* project, uint32_t track_id,
                                                      uint32_t destination_id);
SonareError sonare_project_remove_clip(SonareProject* project, uint32_t clip_id);
SonareError sonare_project_set_clip_gain(SonareProject* project, uint32_t clip_id, float gain);
SonareError sonare_project_set_clip_fade(SonareProject* project, uint32_t clip_id,
                                         const SonareProjectClipFade* fade_in,
                                         const SonareProjectClipFade* fade_out);
SonareError sonare_project_set_clip_loop(SonareProject* project, uint32_t clip_id, int loop_mode,
                                         double loop_length_ppq);
SonareError sonare_project_set_clip_source(SonareProject* project, uint32_t clip_id,
                                           uint32_t source_id);
SonareError sonare_project_duplicate_clip(SonareProject* project, uint32_t clip_id,
                                          double new_start_ppq, uint32_t* out_new_clip_id);
SonareError sonare_project_remove_track(SonareProject* project, uint32_t track_id);
SonareError sonare_project_rename_track(SonareProject* project, uint32_t track_id,
                                        const char* name);
SonareError sonare_project_set_track_route(SonareProject* project, uint32_t track_id,
                                           const char* channel_strip_ref,
                                           const char* output_target);
SonareError sonare_project_add_automation_lane(SonareProject* project, uint32_t track_id,
                                               const SonareAutomationLaneDesc* desc,
                                               size_t* out_lane_index);
SonareError sonare_project_edit_automation_lane(SonareProject* project, uint32_t track_id,
                                                size_t lane_index,
                                                const SonareAutomationLaneDesc* desc);
SonareError sonare_project_remove_automation_lane(SonareProject* project, uint32_t track_id,
                                                  size_t lane_index);
SonareError sonare_project_undo(SonareProject* project);
SonareError sonare_project_redo(SonareProject* project);
SonareError sonare_project_set_midi_events(SonareProject* project, uint32_t clip_id,
                                           const SonareMidiEventPod* events, size_t count);
SonareError sonare_project_import_smf(SonareProject* project, const uint8_t* bytes, size_t len,
                                      uint32_t* out_first_clip_id);
SonareError sonare_project_export_smf(const SonareProject* project, uint8_t** out_bytes,
                                      size_t* out_len);
SonareError sonare_project_import_clip_file(SonareProject* project, const uint8_t* bytes,
                                            size_t len, uint32_t* out_first_clip_id);
SonareError sonare_project_export_clip_file(const SonareProject* project, uint8_t** out_bytes,
                                            size_t* out_len);
SonareError sonare_project_set_program(SonareProject* project, uint32_t clip_id, int program,
                                       int bank);
SonareError sonare_project_set_program_on_channel(SonareProject* project, uint32_t clip_id,
                                                  uint8_t group, uint8_t channel, int program,
                                                  int bank);
SonareError sonare_project_set_midi_fx(SonareProject* project, uint32_t clip_id,
                                       const char* config_json);
SonareError sonare_project_validate_midi_notes(const SonareProject* project, uint32_t clip_id,
                                               SonareNotePairValidation* out);